# phi4-mlx-training

./: .gitignore  CLAUDE.md  README.md  compare_models_output.txt  pyproject.toml  test_model_output.txt
.github/: copilot-instructions.md
data/: valid.jsonl
docs/: tutorial.md
src/phi4-mlx-training/: compare_models.py  download_data.py  fuse_model.py  test_model.py  train_config.py  train_phi4_lora.py  verify_data.py
