[project]
name = "phi4-mlx-training"
version = "0.1.0"
description = "Fine-tuning Phi-4 Mini with MLX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub[cli]>=0.32.3",
    "mlx-lm>=0.24.1",
    "numpy>=2.2.6",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phi4_mlx_training"]
